<resources>
    <string name="app_name">FLOMB</string>
    <string name="entry_added">Eintrag hinzugefügt!</string>
    <string name="entry_not_added">Eintrag nicht hinzugefügt!</string>
    <string name="entry_updated">Eintrag geupdated!</string>
    <string name="entry_not_updated">Eintrag nicht geupdated!</string>
    <string name="date">Datum</string>
    <string name="date1from">Von (Datum A)</string>
    <string name="date1to">Bis (Datum A)</string>
    <string name="date2from">Von (Datum B)</string>
    <string name="date2to">Bis (Datum B)</string>
    <string name="from">Vom&#160;</string>
    <string name="to">Bis&#160;</string>
    <string name="für">&#160;für&#160;</string>
    <string name="am">&#160;am&#160;</string>
    <string name="in">&#160;in&#160;</string>
    <string name="dates_of">Daten vom&#160;</string>
    <string name="and">&#160;und&#160;</string>
    <string name="compared">&#160;werden verglichen!</string>
    <string name="summarized">&#160;werden zusammengefasst!</string>
    <string name="change_from">Entwicklung vom&#160;</string>
    <string name="until">&#160;bis einschließlich dem&#160;</string>
    <string name="showed">&#160;angezeigt!\n</string>
    <string name="statistics">Stats</string>
    <string name="update_entry">Update</string>
    <string name="delete_entry">Delete</string>
    <string name="copy_entry">Copy</string>
    <string name="show_id">Show ID</string>
    <string name="show_place">Show Place</string>
    <string name="hide_id">Hide ID</string>
    <string name="hide_place">Hide Place</string>
    <string name="data_del">Data deleted!</string>
    <string name="missing_data">Es fehlen Informationen! (nicht hinzugefügt)</string>
    <string name="settings">Einstellungen</string>
    <string name="data_n_del">Data not deleted!</string>
    <string name="id_not_available">Eintrag nicht vorhanden!</string>
    <string name="bad_query">Ungültige Suchanfrage!</string>
    <string name="choose_category">Kategorie auswählen!</string>
    <string name="choose_date">Datum auswählen!</string>
    <string name="no_or_wrong_id">Gültige ID auswählen!</string>
    <string name="description">Beschreibung</string>
    <string name="remember">Merken</string>
    <string name="place">Ort</string>
    <string name="amount">Betrag</string>
    <string name="add">Hinzufügen</string>
    <string name="search">Suchen</string>
    <string name="query">Abfragen</string>
    <string name="results">Ergebisse</string>
    <string name="abo">Abo einrichten</string>
    <string name="mapping">Lohn eintragen</string>
    <string name="unmapLoan">Undo Map</string>
    <string name="backup_db">Backup DB</string>
    <string name="no_data_in_month">No data in the past month!</string>
    <string name="exit_question">Wanna exit, biiiitch?</string>
    <string name="delete_question">Sicher, dass du den Eintrag löschen willst?</string>
    <string name="do_nothing">Let it live!</string>
    <string name="delete_this_entry">Kill it!</string>
    <string name="delete_alert">Delete Alert</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Living</item>
        <item>Other</item>
        <item>Move</item>
        <item>Big</item>
    </string-array>
    <string-array name="categories_short">
        <item>F</item>
        <item>L</item>
        <item>O</item>
        <item>M</item>
        <item>B</item>
    </string-array>
    <string-array name="food_subcategories">
        <item>IKS</item>
        <item>GS</item>
        <item>ResBar</item>
        <item>Mensa</item>
        <item>Else</item>
    </string-array>
    <string-array name="living_subcategories">
        <item>Flat</item>
        <item>Hostel</item>
        <item>Hotel</item>
        <item>AirBnB</item>
        <item>Else</item>
    </string-array>
    <string-array name="move_subcategories">
        <item>Train</item>
        <item>Bus</item>
        <item>MFG</item>
        <item>Air</item>
        <item>Bike</item>
        <item>Else</item>
    </string-array>
    <string-array name="other_subcategories">
        <item>Entry</item>
        <item>Gift</item>
        <item>Clothes</item>
        <item>Post</item>
        <item>Hygiene</item>
        <item>Else</item>
    </string-array>
    <string-array name="big_subcategories">
        <item>Big</item>
        <item>Wage</item>
        <item>Bafoeg</item>
    </string-array>

</resources>
